# openDAW

./: .coderabbit.yaml  .dockerignore  .gitignore  .moises-scope-applied  .npmrc  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  lerna.json  package-lock.json  package.json  pr_reviews.json  providers_source.tmp  rabbit_report.txt  rabbit_report_final.txt  turbo.json
crates/: .gitignore  Cargo.toml
crates/abi/: Cargo.toml
crates/abi/src/: lib.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: indexed_collection.rs  lib.rs  note_collection.rs  note_events.rs  value_collection.rs  value_events.rs
crates/boxgraph/src/: address.rs  field.rs  graph.rs  lib.rs  subscription.rs  updates.rs
crates/boxgraph/tests/: field.rs  subscription.rs
crates/comp-delay/: Cargo.toml  build.rs
crates/comp-delay/src/: lib.rs
crates/comp-engine/: Cargo.toml  build.rs
crates/comp-engine/src/: lib.rs
crates/comp-filter/: Cargo.toml  build.rs
crates/comp-filter/src/: lib.rs
crates/comp-ring/: Cargo.toml  build.rs
crates/comp-ring/src/: lib.rs
crates/device-arp/: Cargo.toml
crates/device-arp/src/: lib.rs
crates/device-arp/tests/: arp.rs
crates/device-lowpass/: Cargo.toml
crates/device-lowpass/src/: lib.rs
crates/device-lowpass/tests/: filter.rs
crates/device-saw/: Cargo.toml
crates/device-saw/src/: lib.rs
crates/device-sine/: Cargo.toml
crates/device-sine/src/: lib.rs
crates/device-sine/tests/: audible_graph.rs  sine_device.rs  synth.rs
crates/device-transpose/: Cargo.toml
crates/device-transpose/src/: lib.rs
crates/device-transpose/tests/: transform.rs
crates/device-zeitgeist/: Cargo.toml
crates/device-zeitgeist/tests/: groove.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: analyser.rs  autotune.rs  biquad.rs  ctagdrc.rs  dattorro.rs  fast_math.rs  freeverb.rs  lfo.rs  lib.rs  osc.rs  panning.rs  ppqn.rs  psola.rs  tidal.rs  vocoder.rs
crates/dsp/tests/: autotune_lab.rs
crates/engine/: Cargo.toml
crates/engine-env/: Cargo.toml
crates/engine-env/src/: audio_bus_processor.rs  audio_output_buffer_registry.rs  audio_processor.rs  aux_send.rs  block.rs  block_flags.rs  channel_strip.rs  composite_mix.rs  engine_context.rs  event_buffer.rs  frequency_split.rs  lib.rs  linkwitz_riley.rs  meter.rs  note_event_instrument.rs  note_event_source.rs  note_region.rs  note_region_source.rs  note_sequencer.rs  telemetry.rs  topological_sort.rs
crates/engine-env/tests/: audio_processor.rs  channel_strip.rs  composite_mix.rs  event_buffer.rs  frequency_split.rs  linkwitz_riley.rs  note_sequencer.rs
crates/engine/src/: audio_region_player.rs  audio_unit.rs  broadcast.rs  composite.rs  descriptors.rs  effect_composite.rs  lib.rs  metronome.rs  param_automation.rs  plugin_audio_effect.rs  plugin_instrument.rs  plugin_midi_effect.rs  sample.rs  soundfont.rs  time_stretch.rs
crates/math/src/: lib.rs  random.rs  value_mapping.rs
crates/math/tests/: num.rs
crates/processors/: Cargo.toml
crates/processors/src/: buffer.rs  lib.rs  sequencer.rs
crates/processors/tests/: audible.rs  sequencer.rs
crates/signalsmith/: Cargo.toml
crates/signalsmith-wasmbench/: Cargo.toml  run.mjs  run2.mjs
crates/signalsmith-wasmbench/src/: lib.rs
crates/signalsmith/examples/: bench.rs  render_passthrough.rs  (+2 more)
crates/stretch/: Cargo.toml
crates/stretch-lab/: Cargo.toml
crates/stretch-wasm/: Cargo.toml
crates/transport/: Cargo.toml
(+336 files in other folders)
