[package]
name = "engine"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
boxgraph = {path = "../boxgraph"}
studio-boxes = {path = "../studio-boxes"}
transport = {path = "../transport"}
dsp = {path = "../dsp"}
value = {path = "../value"}
bindings = {path = "../bindings"}
talc = {version = "5.0.3", features = ["counters"]}
